Fixed distortion on category images

--- a/static/styles.css
+++ b/static/styles.css
@@ -47,7 +47,7 @@
 }
 #Celestia_Botanica_Title{
     text-align: center;
-    font-size: 30px;
+    font-size: 28px;
     margin-top: 10px;
     color: #6b4f3a;
 
@@ -120,16 +120,18 @@ body {
   position: relative;
   height: 72vh;
   overflow: hidden;
-  border: 2px solid #5a3e2b;
+  border: 3px solid #5a3e2b;
 }
 
 .hero_parent img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
   object-position: 40% bottom;
+  object-fit: cover;
+
   display: block;
   transition: transform 1.5s ease; /* smooth animation */
+
 }
 
 .hero_parent:hover img {
@@ -180,7 +182,7 @@ body {
 }
 
 #homepage_shop_button:hover {
-    background: #F5EFE6;  /* soft creamy tone */
+    background: #f5efe6;
 
     color: #5a3e2b;           /* keep text same for consistency */
     border-color: #5a3e2b;    /* unchanged for elegance */
@@ -194,48 +196,68 @@ body {
 #categories_title{
     color: #7c5a42;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-bottom: 50px;
-    font-family: "Playfair Display", serif;
-    font-size: 35px;
+    font-family: "Pinyon Script", cursive;
+    font-size: 50px;
+    border: 10px double #c8a96a;
+    width: 400px;
+    margin-left: 35%;
+    padding: 10px;
+    background-color: #f5efe6;
+
+}
+#categories_title a{
+    text-decoration: none;
+    color: inherit;
 }
 .categories div{
     position: relative;
     height: 400px;
     width: 350px;
     overflow: hidden;
-    box-sizing: border-box; /*  includes border in total size */
-}
-.categories img{
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    display: block;
-    border-radius: 5px;
+    border: 15px double #c8a96a;
+    background: #f5efe6;
+    flex-shrink: 0;
 
 }
+.categories img{
+  position: relative;
+  height: 400px;
+  width: 350px;
+  overflow: hidden;
+  background: #f5efe6;
+  flex-shrink: 0;
+}
+
+
 .categories div .overlay-text {
     position: absolute;
-    top: 50%;
+    top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
     width: 90%;
+    font-family: "Georgia", serif;
     font-size: 1.2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: none;
+    background: none;
 }
-#category_2{
-
+.overlay-text a{
+    text-decoration: none;
+    color: inherit;
 
 }
 
-
-
+}
+#category_3 img{
+   transform: scale(1.10);
+}
 
 
 /*----------------------------------About Celestia_Botanica Styles------------------------------------*/
@@ -247,8 +269,7 @@ body {
     width: 95%;
     background-color: #fffaf3;
     margin: 0 auto 30px auto;
-    border: 5px solid #c8b3a8;
-    border-radius: 5px;
+    border: 5px solid #7c5a42;
     padding: 30px;
     box-sizing: border-box;
     gap: 40px;
@@ -296,8 +317,8 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
-  background: #D8C3C0;
-  color: #3d3d4f;
+  background: #DBC095;
+  color:  #5a3e2b;
   font-family: "Playfair Display", serif;
   padding: 40px 60px;
   border-top: 2px solid #c8b3a8;
